added token authentication permission for reading your own user data
